[workspace]

members = [
    "dispatch_examples/greeter",
    "frc42_dispatch",
    "frc42_dispatch/hasher",
    "frc42_dispatch/macros",
    "frc42_dispatch/macros/example",
    "frc46_token",
    "frc46_factory_token",
    "frc46_factory_token/token_impl",
    "frc53_nft",
    "fvm_actor_utils",
    "fvm_dispatch_tools",
    "testing/fil_token_integration",
    "testing/fil_token_integration/actors",
    "testing/fil_token_integration/actors/*_actor",
]

[profile.wasm]
inherits = "release"
# This needs to be unwind, not abort, so that we can handle panics within our panic hook.
panic = "unwind"
overflow-checks = true
lto = "thin"
strip = true
codegen-units = 1
incremental = false
