[package]
name = "test_actor"
version = "0.1.0"
edition = "2021"

[dependencies]
fil_fungible_token = { version = "0.1.0", path = "../../../../fil_fungible_token" }
fvm_dispatch = { path = "../../../../fvm_dispatch" }
fvm_ipld_blockstore = "0.1.1"
fvm_ipld_encoding = "0.2.2"
fvm_sdk = { version = "1.0.0" }
fvm_shared = { version = "0.8.0" }
serde = { version = "1.0.136", features = ["derive"] }
serde_tuple = { version = "0.5.0" }

[build-dependencies]
wasm-builder = "3.0"